@@ -42,6 +42,12 @@ New in spot 2.9.0.dev (not yet released)
     bits.  This affects the output of "ltlcross --csv" and
     "--stats=%t" for many tools.
 
+  - simplify_acceptance() missed some patterns it should have been
+    able to simplify.  For instance Fin(0)&(Fin(1)|Fin(2)|Fin(4))
+    should simplify to Fin(1)|Fin(2)|Fin(4) adter adding {1,2,4} to
+    every place where 0 occur, and then the acceptance would be
+    renumbered to Fin(0)|Fin(1)|Fin(2).  This is now fixed.
+
 New in spot 2.9 (2020-04-30)
 
   Command-line tools:
